force-app/main/default/objects/Player__c/Player__c.object-meta.xml
<CustomObject>
    <label>Player</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Player ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Players</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>