force-app/main/default/objects/Player__c/fields/Initial_Funds__c.field-meta.xml
<CustomField>
    <fullName>Initial_Funds__c</fullName>
    <formula>Supply_Chain_Configuration__r.Initial_Demand__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Funds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>