force-app/main/default/objects/Player__c/fields/Supply_Chain__c.field-meta.xml
<CustomField>
    <fullName>Supply_Chain__c</fullName>
    <formula>Supply_Chain_Configuration__r.Name__c</formula>
    <label>Supply Chain</label>
    <type>Text</type>
</CustomField>