force-app/main/default/objects/Player__c/fields/Supply_Chain_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Supply_Chain_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supply Chain Configuration</label>
    <referenceTo>Supply_Chain_Configuration__c</referenceTo>
    <relationshipLabel>Players</relationshipLabel>
    <relationshipName>Players</relationshipName>
    <type>Lookup</type>
</CustomField>